# google-sheets-mcp-and-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  usage.md
examples/: README.md  audit_conditional_formatting.sh  audit_tables_and_filters.sh  bulk_find_replace.sh  read_column_formulas.sh  safe_value_write.sh
skill/: SKILL.md
skill/references/: advanced.md  basic.md  commands.md  intermediate.md  reading.md  writing.md
src/gsheets/: __init__.py  cli.py  mcp_server.py  models.py
src/gsheets/auth/: __init__.py  resolver.py
src/gsheets/core/: __init__.py  addressing.py  banding.py  batch.py  charts.py  colors.py  comments.py  condformat.py  dataops.py  dataselector.py  dimensions.py  errors.py  export.py  fieldsmask.py  filters.py  flatten.py  format.py  formatting.py  formula_patterns.py  multiread.py  paths.py  pivot.py  reads.py  retry.py  richtext.py  rules.py  service.py  slicers.py  structure.py  tables.py  values.py
tests/: conftest.py
tests/integration/: test_live_smoke.py  test_live_v02.py
tests/unit/: test_addressing.py  test_auth.py  test_auth_resolver.py  test_banding.py  test_batch.py  test_boundary_guard.py  test_charts.py  test_cli.py  test_colors.py  test_comments.py  test_condformat.py  test_conftest.py  test_core_init.py  test_dataops.py  test_dataselector.py  test_describe.py  test_dimensions.py  test_errors.py  test_export.py  test_fieldsmask.py  test_filters.py  test_flatten.py  test_format.py  test_formatting.py  test_formula_patterns.py  test_live_denylist_guard.py  test_mcp_file_output.py  test_mcp_retry.py  test_mcp_server.py  test_models.py  test_multiread.py  test_paths.py  test_pivot.py  test_pkg_init.py  test_pyproject.py  test_reads.py  test_retry.py  test_richtext.py  test_rules.py  test_service.py  (+4 more)
tests/unit/golden/: a1_to_gridrange.json  banding_serialize.json  condformat_boolean_rule.json  condformat_gradient_rule.json  describe_region.json  fieldsmask_cases.json  filters_serialize.json  flatten_full.json  formula_patterns.json  richtext_runs.json  slicer_addslicer_request.json  slicer_serialize.json  table_serialize.json
