[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-sheets-mcp-and-skill"
version = "0.4.1"
description = "Google Sheets integration for AI tools: a pure core library wrapped by an MCP server and a CLI (skill-packageable), with read-side richness — values + formulas, cell formatting, and conditional-format rules — as the thesis. v0.3 adds structure-aware reads (describe, formula-patterns), multi-format output (text/json/jsonl/csv/tsv/markdown), and MCP file-output handles. v0.4 makes retry/backoff off-by-default and per-call configurable on both adapters."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Colin Murray" }]
keywords = ["google-sheets", "mcp", "cli", "spreadsheets", "ai", "skill", "conditional-formatting", "formula-patterns", "csv", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]

# Runtime dependencies (DESIGN.md §9 — exact floors).
# Core + auth use only stdlib + googleapiclient/google.auth*.
# fastmcp/pydantic are adapter-side only (MCP server); argparse (CLI) is stdlib.
dependencies = [
    "google-api-python-client>=2.190",
    "google-auth>=2.50",
    "google-auth-oauthlib>=1.3",
    "google-auth-httplib2>=0.2",
    "fastmcp>=2.11,<3",
    "pydantic>=2",
]

# PEP 735 dependency group — plain `uv sync` installs these (unlike optional-dependencies,
# which need an explicit --extra and silently leave a fresh clone without pytest).
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
gsheets = "gsheets.cli:main"
google-sheets-mcp = "gsheets.mcp_server:main"

[project.urls]
Homepage = "https://github.com/colindmurray/google-sheets-mcp-and-skill"
Repository = "https://github.com/colindmurray/google-sheets-mcp-and-skill"

[tool.hatch.build.targets.wheel]
packages = ["src/gsheets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: hits the real Google Sheets API (needs creds + GSHEETS_LIVE=1)",
    "tests_boundary_guard: selection keyword for the subprocess boundary-guard tests (not a behavioral marker)",
]
